# tola-ssg

./: .gitignore  Cargo.toml  LICENSE  README.md  build-release.sh  build.rs  flake.nix
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/scripts/: release_notes.py
.github/workflows/: cachix.yml  check.yml  release.yml
__test_site/: tola.toml
__test_site/content/: index.typ
__test_site/templates/: base.typ
macros/: Cargo.toml
macros/src/: config.rs  lib.rs
macros/src/config/: attr.rs  field.rs  mod.rs  template.rs  types.rs
resources/starter_example/: tola.toml
resources/starter_example/public/: index.html
screenshots/: example.avif  figure1.avif  figure2.avif  home.avif
src/: build.rs  cli.rs  config.rs  deploy.rs  init.rs  logger.rs  main.rs  serve.rs  watch.rs
src/actor/: compiler.rs  coordinator.rs  fs.rs  messages.rs  mod.rs  vdom.rs  ws.rs
src/actor/compiler/: dispatch.rs  handlers.rs  mod.rs  pipeline.rs  tasks.rs  tests.rs  utils.rs
src/actor/coordinator/: mod.rs  runtime.rs  watch_paths.rs
src/actor/fs/: classifier.rs  debouncer.rs  mod.rs  router.rs  tests.rs  types.rs  watch_roots.rs
src/actor/vdom/: batch.rs  handlers.rs  mod.rs  permalink.rs
src/actor/ws/: client_io.rs  delivery.rs  mod.rs
src/address/: conflict.rs  mod.rs  resolve.rs  resource.rs  space.rs
src/asset/: generated.rs  kind.rs  meta.rs  minify.rs  mod.rs  process.rs  route.rs  scan.rs  version.rs
src/cache/: failure.rs  index.rs  mod.rs  modified.rs  vdom.rs
src/cli/: args.rs  build.rs  common.rs  deploy.rs  fix.rs  mod.rs  query.rs
src/cli/fix/: check.rs  mod.rs  prompt.rs
src/cli/init/: config.rs  mod.rs  structure.rs  validate.rs
src/cli/query/: collect.rs  mod.rs  output.rs  types.rs
src/cli/serve/: build.rs  classify.rs  compile.rs  content.rs  lifecycle.rs  mod.rs  path.rs  response.rs  scan.rs  startup.rs
src/cli/validate/: mod.rs  report.rs  scan.rs
src/compiler/: assets.rs  dependency.rs  deps.rs  family.rs  meta.rs  mod.rs  pages.rs  scheduler.rs  typst.rs  watch.rs
src/compiler/page/: cache.rs  format.rs  mod.rs  output.rs  warning.rs  write.rs
src/config/: base.rs  build.rs  defaults.rs  handle.rs  mod.rs  paths.rs  util.rs
src/config/section/: deploy.rs  mod.rs  serve.rs  validate.rs
src/config/types/: error.rs  field.rs  handle.rs  mod.rs  path.rs  status.rs
src/core/: category.rs  driver.rs  link.rs  mod.rs  priority.rs  state.rs  url.rs
src/data/: store.rs
src/embed/: asset.rs  mod.rs  template.rs
src/embed/css/: enhance.css  nav.css  typst.css
src/embed/recolor/: recolor.css  recolor.js
src/embed/serve/: hotreload-error-overlay.css  hotreload.js  loading.html  welcome.css  welcome.typ
src/embed/typst/: tola.typ
src/freshness/: cache.rs  hash.rs  mod.rs  mtime.rs
src/generator/: extract.rs  mod.rs  rss.rs  sitemap.rs
src/generator/feed/: atom.rs  common.rs  mod.rs  rss.rs
src/hooks/: mod.rs  runner.rs
src/hooks/css/: mod.rs  tailwind.rs  uno.rs
src/image/: mod.rs
src/image/background/: color.rs  detect.rs  floodfill.rs  mask.rs  mod.rs  process.rs
src/image/recolor/: mod.rs
src/package/: inject.rs  mod.rs  phase.rs  tola.rs
src/page/: compiled.rs  iteration.rs  kind.rs  links.rs  meta.rs  mod.rs  resolve.rs  route.rs  state.rs  store.rs
src/pipeline/: mod.rs
src/reload/: active.rs  classify.rs  compile.rs  diff.rs  message.rs  mod.rs  patch.rs  queue.rs  server.rs
src/seo/: extract.rs  mod.rs  og.rs  sitemap.rs
src/typst_lib/: diagnostic.rs  file.rs  font.rs  library.rs  mod.rs  package.rs  world.rs
src/utils/: build.rs  category.rs  command.rs  css.rs  date.rs  exec.rs  git.rs  hash.rs  hooks.rs  html.rs  meta.rs  mime.rs  minify.rs  mod.rs  page.rs  platform.rs  plural.rs  rss.rs  sitemap.rs  slug.rs  svg.rs  watch.rs  xml.rs
test_site/: .gitignore  tola.toml
test_site/content/: colocated.typ  index.typ
(+81 files in other folders)
